fix: change gap between links when screen width less than 380px

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -34,7 +34,9 @@ a {
     animation: enter ease-in 1;
     animation-fill-mode: forwards;
 }
-
+html {
+    overflow: hidden;
+}
 body {
     padding: 0;
     margin: 0;
