--- a/src/assets/styles/mobile.scss
+++ b/src/assets/styles/mobile.scss
@@ -36,7 +36,7 @@
     }
 
     .links {
-        gap: 12px;
+        gap: 8px;
         &__item {
             padding: 6px 0;
             font-size: 0.8em;
